--- a/_config.yml
+++ b/_config.yml
@@ -5,25 +5,31 @@ github:
 projects:
   - name: Bar.js
     url: https://github.com/DaedalusDev/bar.js
+    url_demo: https://bar.nexk.fr/
+    short_description:
     description: Partagez efficacement l'addition avec vos amis !
     img: http://bar.nexk.fr/src/img/favicon/bar.svg
   - name: Bar.php
     url: https://github.com/DaedalusDev/bar.php
+    url_demo: https://bar.nexk.fr/
     description: Profitez d'une solide API REST pour gérer vos articles Bar.js
     img: http://bar.nexk.fr/src/img/favicon/bar.svg
   - name: FluxManager
     url: https://github.com/DaedalusDev/FluxManager
     description: Administrez et visualisez le flux de donnée de votre application.
+    img: /assets/img/flux_manager.svg
   - name: FluxManagerApi
     url: https://github.com/DaedalusDev/FluxManagerApi
     description: Api de mise en persistance des information de FluxManager
+    img: /assets/img/flux_manager_api.svg
   - name: Capeloï
     url: https://github.com/DaedalusDev/capeloi
     description: Application "clé en main" pour une gestion de stock efficace
+    img: /assets/img/capeloi.svg
   - name: Magasin.vue
     url: https://github.com/DaedalusDev/Magasin.vue
     description: Application "clé en main" pour gérer une boutique
-
+    img: /assets/img/magasin.vue.svg
 
 
 
